<resources>
    <string name="app_name">Autohub</string>
    <string name="lets_click">let\'s get clicking.</string>
    <string name="Montserrat_Regular">Montserrat-Regular</string>
    <string name="Montserrat_Medium">Montserrat-Medium</string>
    <string name="Montserrat_SemiBold">Montserrat-SemiBold</string>
    <string name="Montserrat_Bold">Montserrat-Bold</string>
    <string name="signup_dot">signup.</string>
    <string name="next">Next</string>
    <string name="signup_name_info">Hey! What\'s your\nname?</string>
    <string name="first_name">first name.</string>
    <string name="last_name">last name.</string>
    <string name="f_name_error">Please enter first name</string>
    <string name="l_name_error">Please enter last name</string>
    <string name="signup_emailpassword_info">Set an email and password.</string>
    <string name="email">email.</string>
    <string name="password">password.</string>
    <string name="confirm_password">confirm password.</string>
    <string name="email_empty_error">Please enter email address</string>
    <string name="email_format_error">Please enter valid email address</string>
    <string name="password_error">Please enter password</string>
    <string name="password_different_with_confirm">Your password and confirmation password do not match.</string>
    <string name="signup_letsgo_info">Perfect. Now let\'s build your profile and show the world your photographic abilities.</string>
    <string name="letsgo">LET\'S GO</string>
    <string name="signup_avatar_info">Let\'s start with a cool yet professional photograph of yours. Generally, photos with cameras do the magic.</string>
    <string name="signup_camerainfo_info">Cool. Now let\'s get your bio done. Write something about your gear, lenses etc. , and make it interesting. You can always edit it later.</string>
    <string name="signup_camerabrand_info">Awesome. Now tell us about your camera and gear, which is the heart and soul of a photographer.</string>
    <string name="signup_camerabrand_info1">mention other gear, one equipment\nper field. (optional)</string>
    <string name="e_g_tripod">E.g - Tripod</string>
    <string name="e_g_50_mm_nikkor_prime_lens">E.g - 50 mm Nikkor </string>
    <string name="signup_interest_info">Superrrb! You\'re closer to becoming a pro-grapher. Tell us about your interest areas, so we get more clients to you!</string>
    <string name="signup_bestphoto_info">Let your pictures do the talking,\nit\'s time to show your remarkable work for everyone to see, upload your 4 best photographs. You can always edit it later.</string>
    <string name="signup_plan_info">One last step. Set your rates for your services, and make sure to set rate less or around the average rate to attract clients.\nYou can create two plans for now.</string>
    <string name="average_rate_rs_100_15_shots">Average Rate: Rs. 100/15 SHOTS</string>
    <string name="set_plan_name">SET PLAN NAME</string>
    <string name="rs">RS.</string>
    <string name="no_of_pictures">No. of Photographs</string>
    <string name="editing_included">editing included?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="login">LOGIN</string>
    <string name="login_dot">login.</string>
    <string name="login_info">welcome back.</string>
    <string name="enter_email">enter email.</string>
    <string name="enter_password">enter password.</string>
    <string name="forgot_password">forgot password?</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_confirmation">Do you really want to log out?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="shoot">SHOOT</string>
    <string name="sign_up">SIGNUP</string>
    <string name="sign_up_image_info">Let\'s start with a cool yet professional photograph of yours. Generally, photos with cameras do the magic.</string>
    <string name="camera_info">Cool. Now let\'s get your bio done. Write something about your gear, lenses etc. , and make it interesting. You can always edit it later.</string>
    <string name="remaining">240 remaining</string>
    <string name="title_activity_signup_last">SignupLastActivity</string>
    <string name="sign_up_last_info">One last step. Set your rates for your services, and make sure to set rate less or around the average rate to attract clients.\nYou can create two plans for now.</string>
    <string name="your_number">Great, and your number?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="mobile_no">Mobile No</string>
    <string name="otp_hint">OTP</string>
    <string name="set_password">Set a password.</string>
    <string name="perfect_text">Perfect. Now let\'s build your profile and show the world your photographic abilities.</string>
    <string name="mention_other_gear_one_equipment_per_field_optional">mention other gear, one equipment per field. (optional)</string>
    <string name="superrb">Superrrb! You\'re closer to becoming a pro-grapher. Tell us about your interest areas, so we get more clients to you!</string>
    <string name="best_images">Let your pictures do the talking,\nit\'s time to show your remarkable work for everyone to see, upload your 4 best photographs. You can always edit it later.</string>
    <string name="profile">PROFILE</string>
    <string name="alex_r">Alex R.</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_your_details">EDIT YOUR DETAILS</string>
    <string name="create_offers">CREATE OFFERS</string>
    <string name="my_favourites">My Favourites</string>
    <string name="preview">PREVIEW</string>
    <string name="viewmore">View More</string>
    <string name="editinfo">Edit Info</string>
    <string name="freeshots">Free Shots</string>
    <string name="picture_str">RS. 200/20 PICTURES</string>
    <string name="nikond5300">Nikon D5300</string>
    <string name="neww">New</string>
    <string name="rank">Rank</string>
    <string name="find_your_perfect_photographer">Find your Perfect Photographer.</string>
    <string name="photogenic_locations_nearby">Photogenic Locations Nearby.</string>
    <string name="find">Find</string>
    <string name="edit_details">Edit Details</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="john_dalton">John Dalton</string>
    <string name="update">Update</string>
    <string name="view_more_desc">I\'m a free spirited photographer and click good pictures, and have a good knack for photography and use 20mm lens and 45 mm lens for the same, and click good pictures. I\'m talented too and hard working.</string>
    <string name="shoot_gear">MY SHOOT GEAR</string>
    <string name="nikor_prime_lens">Nikkor Prime Lens</string>
    <string name="tripod">Tripod</string>
    <string name="external_flash">External Flash</string>
    <string name="model">Model</string>
    <string name="book_this_package">Book this package</string>
    <string name="redeem_offer">Redeem Offer</string>
    <string name="read_more">Read More</string>
    <string name="view_more1_desc">I\'m a free spirited photographer and click good pictures, and have a good knack for photography and use 20mm lens and 45 mm lens for the same, and click good pictures.</string>
    <string name="photos">Photos</string>
    <string name="bio">Bio</string>
    <string name="update_info">Update Info</string>
    <string name="camera">Camera</string>
    <string name="edit">Edit</string>
    <string name="camera_gear">Camera Gear</string>
    <string name="mmlens">50 mm lens</string>
    <string name="superb">Superrrb! You\'re closer to becoming a pro-grapher. Tell us about your interest areas, so we get more clients to you!</string>
    <string name="asweometext">Awesome. Now tell us about your camera and gear, which is the heart and soul of a photographer.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_detect_otp">Please wait while we auto detect the verification code.</string>
    <string name="invalid_no">Please enter valid number</string>
    <string name="payment_option">Payment Option</string>
    <string name="saved_profiles">Saved Profiles</string>
</resources>