<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_dot"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_22ssp"
        app:fontName="Montserrat_Bold"/>

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTitle"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:text="@string/login_info"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/colorBlack"
        app:fontName="Montserrat_Bold"/>

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_info"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:text="@string/enter_email"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/colorBlack"
        app:fontName="Montserrat_SemiBold"/>

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/email"
        style="@style/inputBox"
        android:layout_below="@id/enter_email"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:text="@string/enter_password"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/colorBlack"
        app:fontName="Montserrat_SemiBold"/>

    <RelativeLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_below="@id/enter_password"
        android:layout_marginTop="@dimen/_5sdp">
        <com.autohubtraining.autohub.customview.CustomEditView
            android:id="@+id/password"
            style="@style/inputBox"
            android:layout_marginTop="@dimen/_1sdp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/visiblePwdBtn"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/visible_password"/>
    </RelativeLayout>

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_12ssp"
        android:background="@android:color/transparent"
        style="@style/setfontButton"/>

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/pinkNextButton"
        android:layout_alignParentBottom="true"
        android:text="@string/login" />

</RelativeLayout>