<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".scene.choose.ChooseActivity">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/title"
        style="@style/semiBold17TVBlack"
        android:text="@string/shoot" />

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/subTitle"
        style="@style/semiBold17TVBlack"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/sign_up_dot" />

    <ProgressBar
        android:id="@+id/activeProgress"
        style="@style/appProgressBar"
        android:layout_below="@id/subTitle"
        android:progress="20" />

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/your_name_title"
        style="@style/pageInfo"
        android:layout_below="@+id/activeProgress"
        android:text="@string/your_number" />

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/mobile_no"
        style="@style/inputBox"
        android:layout_below="@id/your_name_title"
        android:layout_marginTop="@dimen/margin20"
        android:hint="@string/mobile_no" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_below="@id/mobile_no"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="number"
        android:visibility="gone"
        android:itemBackground="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        app:itemCount="6"
        app:itemSpacing="6dp"
        app:lineColor="@color/colorBlack"
        app:state_filled="true"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/auto_retrieve_textview"
        android:layout_width="wrap_content"
        android:layout_below="@id/otp_view"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/auto_detect_otp"/>

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/resendBtn"
        android:visibility="gone"
        android:layout_below="@id/otp_view"
        style="@style/whiteRectButton"
        android:layout_marginTop="@dimen/_17sdp"
        android:text="@string/resend_code"
        android:layout_height="@dimen/_26sdp"
        android:textSize="@dimen/_15ssp"
        />

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/pinkNextButton"
        android:layout_alignParentBottom="true"
        android:text="NEXT"
        />


</RelativeLayout>