<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/signup_name_info"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/colorBlack"
        app:fontName="Montserrat_SemiBold"/>

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/first_name"
        style="@style/inputBox"
        android:layout_below="@id/name_info"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="@string/first_name" />

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/last_name"
        style="@style/inputBox"
        android:layout_below="@id/first_name"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="@string/last_name" />

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/pinkNextButton"
        android:layout_alignParentBottom="true"
        android:text="NEXT" />

</RelativeLayout>