<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".scene.choose.ChooseActivity">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/title"
        style="@style/semiBold17TVBlack"
        android:text="@string/shoot" />

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/subTitle"
        style="@style/semiBold17TVBlack"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/sign_up_dot" />

    <ProgressBar
        android:id="@+id/activeProgress"
        style="@style/appProgressBar"
        android:layout_below="@id/subTitle"
        android:progress="20" />

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/your_name_title"
        style="@style/pageInfo"
        android:layout_below="@+id/activeProgress"
        android:text="@string/camera_info" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:layout_weight="1"
        android:background="@drawable/white_roundcorner_button">

        <EditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="left|top"
            android:padding="@dimen/margin10" />

        <com.autohubtraining.autohub.customview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/remaining"
            android:textColor="#ff000000"
            android:textSize="@dimen/_12ssp"
            app:fontName="Montserrat_SemiBold" />

    </RelativeLayout>

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/blackButton"
        android:text="@string/next" />

</LinearLayout>