<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:id="@+id/emailpassword_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/signup_emailpassword_info"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/colorBlack"
        app:fontName="Montserrat_SemiBold"/>

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/email"
        style="@style/inputBox"
        android:layout_below="@id/emailpassword_info"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/password"
        style="@style/inputBox"
        android:layout_below="@id/email"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/visiblePwdBtn"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignTop="@id/password"
        android:background="@drawable/visible_password"/>

    <com.autohubtraining.autohub.customview.CustomEditView
        android:id="@+id/confirm_password"
        style="@style/inputBox"
        android:layout_below="@id/password"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/confirm_password_badge"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_alignTop="@id/confirm_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:background="@drawable/password_confirm"
        android:visibility="gone" />

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/pinkNextButton"
        android:layout_alignParentBottom="true"
        android:text="NEXT" />

</RelativeLayout>