<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.autohubtraining.autohub.customview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signup_camerainfo_info"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16ssp"
        app:fontName="Montserrat_SemiBold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_weight="1"
        android:background="@drawable/white_roundcorner_button">

        <EditText
            android:id="@+id/editBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="left|top"
            android:padding="@dimen/margin10" />

        <com.autohubtraining.autohub.customview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/remaining"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10ssp"
            app:fontName="Montserrat_SemiBold" />

    </RelativeLayout>

    <com.autohubtraining.autohub.customview.CustomButton
        android:id="@+id/nextBtn"
        style="@style/blackButton"
        android:text="@string/next" />

</LinearLayout>